[package]
name = "xsd-derive"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
roxmltree = "0.13"
rust_decimal = { version = "1.6", default-features = false, features = ["std"] }
syn = { version = "1.0", features = ["full"] }
thiserror = "1.0"
