[package]
name = "xsd-internal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
roxmltree = "0.14"
rust_decimal = { version = "1.6", default-features = false, features = ["std"] }
syn = { version = "1.0", features = ["full"] }
thiserror = "1.0"
