[package]
name = "xsd-internal"
version = "0.1.0"
edition = "2021"

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
roxmltree = "0.16"
rust_decimal = { version = "1.6", default-features = false, features = ["std"] }
syn = { version = "1.0", features = ["full"] }
thiserror = "1.0"
