[package]
name = "xsd-internal"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
Inflector = "0.11"
proc-macro2 = "1.0"
quote = "1.0"
roxmltree = "0.19"
rust_decimal = { version = "1.6", default-features = false, features = ["std"] }
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0"
