[package]
name = "xsd"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2021"
license = "MIT"

[dependencies]
roxmltree = "0.19"
thiserror = "1.0"
xsd-derive = { path = "../xsd-derive" }
xsd-internal = { path = "../xsd-internal" }
xml-rs = "0.8"

[dev-dependencies]
pretty_assertions = "1.2"
